--- a/src/main/resources/templates/room.html
+++ b/src/main/resources/templates/room.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Employees List</title>
+    <title>Room</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -76,49 +76,20 @@
     <div class="row content">
         <div class="col-sm-3 sidenav">
 
-            <form action="/employees" method="post">
-                <div class="form-group">
-                    <label for="firstName">First Name</label>
-                    <input type="text" class="form-control" name="firstName" id="firstName" placeholder="Input...">
-                </div>
-                <div class="form-group">
-                    <label for="lastName">Last Name</label>
-                    <input type="text" class="form-control" name="lastName" id="lastName" placeholder="Input...">
-                </div>
-                <div class="form-group">
-                    <label for="phoneNumber">Phone Number</label>
-                    <input type="text" class="form-control" name="phoneNumber" id="phoneNumber" placeholder="Input...">
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="text" class="form-control" name="email" id="email" placeholder="Input...">
-                </div>
-                <div class="form-group">
-                    <label for="department">Department</label>
-                    <select name="department" id="department" class="form-control">
-                        <option value="BACKEND">Backend</option>
-                        <option value="FRONTEND">Frontend</option>
-                        <option value="HR">HR</option>
-                    </select>
-                </div>
-                <br>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
 
         </div>
 
         <div class="col-sm-8 text-left">
-
-            <h1>Employees List</h1>
-            <div class="list-group" th:each="employee : ${employees}">
-                <a href="#"
-                   th:href="'/employees/' + ${employee.id}"
-                   th:text="${employee.firstName} + ', ' + ${employee.lastName} + ', ' + ${employee.department}"
-                   class="list-group-item">
-                    employee 1
-                </a>
+            <div th:if="${room} != null">
+                <h1 th:text="${room.name}">room name</h1>
+                <h3 th:text="'Capacity: ' + ${room.capacity}">capacity</h3>
             </div>
-
+            <div th:unless="${room} != null">
+                <br>
+                There's no room with that number!
+            </div>
+            <br>
+            <a href="/rooms">Back</a>
         </div>
     </div>
 </div>
