--- a/src/main/resources/templates/allMeetings.html
+++ b/src/main/resources/templates/allMeetings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Employees List</title>
+    <title>Meetings List</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -76,30 +76,26 @@
     <div class="row content">
         <div class="col-sm-3 sidenav">
 
-            <form action="/employees" method="post">
+            <form action="/meetings" method="post">
                 <div class="form-group">
-                    <label for="firstName">First Name</label>
-                    <input type="text" class="form-control" name="firstName" id="firstName" placeholder="Input...">
+                    <label for="title">Title</label>
+                    <input type="text" class="form-control" name="title" id="title" placeholder="Input...">
                 </div>
                 <div class="form-group">
-                    <label for="lastName">Last Name</label>
-                    <input type="text" class="form-control" name="lastName" id="lastName" placeholder="Input...">
+                    <label for="description">Description</label>
+                    <input type="text" class="form-control" name="description" id="description" placeholder="Input...">
                 </div>
                 <div class="form-group">
-                    <label for="phoneNumber">Phone Number</label>
-                    <input type="text" class="form-control" name="phoneNumber" id="phoneNumber" placeholder="Input...">
+                    <label for="room">Room</label>
+                    <input type="number" class="form-control" name="room" id="room" placeholder="Input...">
                 </div>
                 <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="text" class="form-control" name="email" id="email" placeholder="Input...">
+                    <label for="owner">Owner</label>
+                    <input type="number" class="form-control" name="owner" id="owner" placeholder="Input...">
                 </div>
                 <div class="form-group">
-                    <label for="department">Department</label>
-                    <select name="department" id="department" class="form-control">
-                        <option value="BACKEND">Backend</option>
-                        <option value="FRONTEND">Frontend</option>
-                        <option value="HR">HR</option>
-                    </select>
+                    <label for="date">Date</label>
+                    <input type="date" class="form-control" name="date" id="date" placeholder="Input...">
                 </div>
                 <br>
                 <button type="submit" class="btn btn-primary">Submit</button>
@@ -109,15 +105,31 @@
 
         <div class="col-sm-8 text-left">
 
-            <h1>Employees List</h1>
-            <div class="list-group" th:each="employee : ${employees}">
+            <h1>Meeting List</h1>
+            <br>
+
+            <div class="row" th:each="meeting : ${meetings}">
+                <div class="col-xs-4 meeting">
+                    <h6 th:text="${meeting.date}">21-11-2017</h6>
+                    <h1>
+                        <strong th:text="${meeting.title}">Proces rekrutacyjny</strong>
+                        <span th:text="' (' + ${meeting.attendeesCount} + ') '">(5)</span> - <span
+                            th:text="${meeting.room.name}">Winkiel</span>
+                    </h1>
+                   <!-- <h3 th:text="${meeting.owner.firstName} + ' ' + ${meeting.owner.lastName}">Szymon Nowak</h3>-->
+                    <p th:text="${meeting.shortenedDescription}">Lorem ipsum dolar...</p>
+                </div>
+            </div>
+
+
+            <!--<div class="list-group" th:each="employee : ${employees}">
                 <a href="#"
                    th:href="'/employees/' + ${employee.id}"
                    th:text="${employee.firstName} + ', ' + ${employee.lastName} + ', ' + ${employee.department}"
                    class="list-group-item">
                     employee 1
                 </a>
-            </div>
+            </div>-->
 
         </div>
     </div>
