--- a/src/main/resources/templates/employee.html
+++ b/src/main/resources/templates/employee.html
@@ -62,7 +62,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="/employees">Employees</a></li>
                 <li><a href="/rooms">Rooms</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="/meetings">Meetings</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
